--- a/src/index.css
+++ b/src/index.css
@@ -97,5 +97,10 @@
 
   body {
     @apply bg-background text-foreground;
+  background-image: url('/bg-green.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   }
-}
+} 
