--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@
 
   body {
     @apply bg-background text-foreground;
-  background-image: url('/bg-green.jpg');
+  /* background-image: url('/bg-green.jpg'); */
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
